--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "react_advanced_datatable",
   "author": "HAGENAY",
-  "keywords": ["react", "components", "ui", "data table", "pagination", "search"],
-  "version": "0.1.0",
+  "keywords": [
+    "react",
+    "components",
+    "ui",
+    "data table",
+    "pagination",
+    "search"
+  ],
+  "version": "0.1.1",
   "private": false,
   "engines": {
     "node": "16.x"
